--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "private": true,
   "dependencies": {
     "bootstrap": "~3.2.0",
-    "modernizr": "~2.8.2"
+    "modernizr": "~2.8.2",
+    "polymer": "Polymer/polymer#^1.0.0",
+    "angular": "1.3.15"
   },
   "devDependencies": {
     "masonry": "~3.3.0",
